fix: Fix file reading on windows